compiler/e2e/test/snapshot/bootstrap/module_tree/not_found/snapshot.snap
---
source: compiler/e2e/test/snapshot/mod.rs
expression: assert_string
---
stderr:
error: failed to load the source file for the submodule
  ╭─ bootstrap/module_tree/not_found/main.pnx:1:15
  │
1 │ public module notFound
  │               ^^^^^^^^
  │
  = failed to load the source file for the submodule at `bootstrap/module_tree/not_found/notFound.pnx`: general IO error (os error 2)



stdout:
